Misc issues due to re-architecturing #1
Removed .ui-cytoscape-panzoom selector and set z-index for .cy-panzoom
as 1000 instead of -100(Realized that -100 was too low)

--- a/app/css/sbgnviz.css
+++ b/app/css/sbgnviz.css
@@ -148,12 +148,8 @@ body {
     width: 0;
 }
 
-.ui-cytoscape-panzoom {
-    z-index: -100 !important;
-}
-
 .cy-panzoom {
-    z-index: -100 !important;
+    z-index: 1000 !important;
 }
 
 .qtip-bootstrap .qtip-titlebar{
